--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch",
+            "name": "Launch main",
             "type": "go",
             "request": "launch",
-            "mode": "auto",
-            "program": "${fileDirname}",
-            "env": {},
-            "args": []
-        }
+            "mode": "debug",
+            "program": "${workspaceFolder}/preprocessor-test.go"
+        },
     ]
 }
