--- a/input/simple_alias.yaml
+++ b/input/simple_alias.yaml
@@ -8,9 +8,9 @@ alias-src:
   - some_other.yaml
 
 alias:
-  registry : {{.Run.Registry}}
-  commit : {{.Run.Commit}}
-  id : {{.Run.ID}}
+  registry : "{{.Run.Registry}}"
+  commit : "{{.Run.Commit}}"
+  id : "{{.Run.ID}}"
   bar : https://github.com/ehotinger/bar
   qux : https://github.com/ehotinger/qux
 
