--- a/input/simple_alias.yaml
+++ b/input/simple_alias.yaml
@@ -3,17 +3,20 @@
 #      -> build-qux -> build-foo -> build-qaz
 #      -> build-bar
 
-alias-src:
-  - https://raw.githubusercontent.com/estebanreyl/preprocessor-test/master/input/global_src.yaml
-  - input/some_other.yaml
 
 alias:
-  registry : "{{.Run.Registry}}"
-  commit : "{{.Run.Commit}}"
-  id : "{{.Run.ID}}"
-  bar : https://github.com/ehotinger/bar
-  qux : https://github.com/ehotinger/qux
-  
+  src :
+    - https://raw.githubusercontent.com/estebanreyl/preprocessor-test/master/input/global_src.yaml
+    - input/some_other.yaml
+
+  values:
+    registry : "{{.Run.Registry}}"
+    commit : "{{.Run.Commit}}"
+    id : "{{.Run.ID}}"
+    bar : https://github.com/ehotinger/bar
+    qux : https://github.com/ehotinger/qux
+
+test: 600
 stepTimeout: 600
 version: v1.0.0
 
