--- a/input/simple_alias.yaml
+++ b/input/simple_alias.yaml
@@ -15,6 +15,7 @@ alias:
     id : "{{.Run.ID}}"
     bar : https://github.com/ehotinger/bar
     qux : https://github.com/ehotinger/qux
+    acb : "azure/images/acr-builder"
 
 test: 600
 stepTimeout: 600
@@ -54,17 +55,17 @@ steps:
     isolation: default
 
   - id: build-bar
-    cmd: azure/images/acr-builder build -f Dockerfile $bar --cache-from=ubuntu
+    cmd: acb build -f Dockerfile $bar --cache-from=ubuntu
     when: ["-"]
 
   - id: B
     when: [C]
-    cmd: azure/images/git clone https://github.com/ehotinger/clone
+    cmd: git clone https://github.com/ehotinger/clone
     ignoreErrors: true
     disableWorkingDirectoryOverride: true
 
   - id: build-foo
-    cmd: azure/images/acr-builder build -f Dockerfile https://github.com/ehotinger/foo --cache-from=ubuntu
+    cmd: acb build -f Dockerfile https://github.com/ehotinger/foo --cache-from=ubuntu
     env: ["eric=foo"]
     when: [build-qux]
 
